tests/cases/compiler-development/artifact/errors/diagnostic-unexpected-character.diagnostic
diagnostic error code=ari/compiler message="unexpected character '$'" @ tests/cases/compiler-development/artifact/errors/diagnostic-unexpected-character.ari:1:1
